--- a/covid_restaurant_data/open_table/open_table_dataframes.ipynb
+++ b/covid_restaurant_data/open_table/open_table_dataframes.ipynb
@@ -9,19 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary libraries and dependencies.\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import csv\n",
     "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +164,7 @@
        "[2 rows x 174 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_york_seated.to_csv(\"new_york_seated_percentages_gvd.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +728,7 @@
        "[17 rows x 131 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +839,7 @@
        "[1 rows x 131 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,98 +850,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>4/1</th>\n",
-       "      <th>4/2</th>\n",
-       "      <th>4/3</th>\n",
-       "      <th>4/4</th>\n",
-       "      <th>4/5</th>\n",
-       "      <th>4/6</th>\n",
-       "      <th>4/7</th>\n",
-       "      <th>4/8</th>\n",
-       "      <th>...</th>\n",
-       "      <th>7/29</th>\n",
-       "      <th>7/30</th>\n",
-       "      <th>7/31</th>\n",
-       "      <th>8/1</th>\n",
-       "      <th>8/2</th>\n",
-       "      <th>8/3</th>\n",
-       "      <th>8/4</th>\n",
-       "      <th>8/5</th>\n",
-       "      <th>8/6</th>\n",
-       "      <th>8/7</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>city</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>30.74</td>\n",
-       "      <td>28.19</td>\n",
-       "      <td>32.21</td>\n",
-       "      <td>38.92</td>\n",
-       "      <td>35.5</td>\n",
-       "      <td>32.17</td>\n",
-       "      <td>14.61</td>\n",
-       "      <td>36.49</td>\n",
-       "      <td>32.25</td>\n",
-       "      <td>28.56</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 131 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Type      Name  4/1  4/2  4/3  4/4  4/5  4/6  4/7  4/8  ...   7/29   7/30  \\\n",
-       "16  city  New York  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  30.74  28.19   \n",
-       "\n",
-       "     7/31    8/1   8/2    8/3    8/4    8/5    8/6    8/7  \n",
-       "16  32.21  38.92  35.5  32.17  14.61  36.49  32.25  28.56  \n",
-       "\n",
-       "[1 rows x 131 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Clean the empty data from quarantine.\n",
     "nyc_reopened_data=nyc_reopened_data.fillna(0)"
@@ -939,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,17 +869,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nyc_reopened_data=nyc_reopened_data.drop(columns=[\"Type\"])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nyc_reopened_data.to_csv(\"nyc_reopened_data.csv\")"
+   ]
   }
  ],
  "metadata": {
